# Voice-Activated-LED-ESP32S3-Box-3

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/bsp/: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  fan_ui.c  fan_ui.h  light_ctrl.c  light_ctrl.h  light_state.c  light_state.h  light_ui.c  light_ui.h  main.c
main/app/: app_led.c  app_led.h  app_mqtt.c  app_mqtt.h  app_sensor.c  app_sensor.h  app_sr.c  app_sr.h  app_sr_handler.c  app_status.c  app_status.h  app_wifi.c  app_wifi.h  fan_ctrl.c  fan_ctrl.h
main/gui/: ui_sr.c
main/gui/image/: switchOff.h  switchOn.h
